page-container layout and styling to implement a  sticky-footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,18 @@
 
   <body>
 
-    <%= render "shared/navbar" %>
-    <%= render "shared/flashes" %>
-    <%= yield %>
+    <div class="page-container">
+      <div class="navbar-container">
+        <%= render "shared/navbar" %>
+      </div>
+      <div class="content-container">
+        <%= render "shared/flashes" %>
+        <%= yield %>
+      </div>
+      <div class="footer-container">
+        <%= render "shared/footer" %>
+      </div>
+    </div>
 
   </body>
-  <%= render "shared/footer" %>
-
-
 </html>
