--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
   <div class="container">
-    <h1>Ombu Hub brings <strong>tech skills</strong> to <strong>young people</strong>!</h1>
-    <p>Change theirs life and tech them how to code and create.</p>
-    <a class="btn btn-flat" href="#">Soon</a>
+    <h1>Ombu Hub lleva habilidades tecnológicas a los jóvenes</strong>!</h1>
+    <p>Transformamos sus vidas y les enseñamos a programar y crear</p>
+    <a class="btn btn-flat" href="https://api.whatsapp.com/send/?phone=543812073710&text=Hola%21+Me+gustar%C3%ADa+recibir+informaci%C3%B3n+sobre+el+curso+de+Rob%C3%B3tica+y+Programaci%C3%B3n+para+ni%C3%B1os+y+j%C3%B3venes+%EF%BF%BD&type=phone_number&app_absent=0">Enviar Whatsapp</a>
   </div>
 </div>
