--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,12 +1,9 @@
 <div class="footer">
   <div class="footer-links">
-    <a href="#"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.instagram.com/ombu_hub/"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.linkedin.com/company/70938501/"><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
-    Ombu Hub<i class="fas fa-heart"></i>
+    Ombu Hub
   </div>
 </div>
