--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -28,7 +28,7 @@
             </div>
           </li>
         <% else %>
-          <li class="nav-item">
+          <li class="nav-item" style="display:none;">
             <%= link_to "Login", new_user_session_path, class: "nav-link" %>
           </li>
         <% end %>
