--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -12,8 +12,7 @@
   align-items: center;
 }
 .footer-links a {
-  color: black;
-  opacity: 0.15;
+  color: #47D0D0;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
