--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,6 +4,6 @@
     <a href="https://www.linkedin.com/company/70938501/"><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
-    Ombu Hub
+    <h3>Ombu Hub</h3>
   </div>
 </div>
