--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -18,6 +18,8 @@
   border-radius: 4px;
   background: #47D0D0;
   transition: background 0.3s ease;
+  width: max-content;
+
 }
 
 .btn-flat:hover {
