--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,111 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
-  <div class="container">
-    <h1>Ombu Hub lleva habilidades tecnológicas a los jóvenes</strong>!</h1>
-    <p>Transformamos sus vidas y les enseñamos a programar y crear</p>
-    <a class="btn btn-flat" href="https://api.whatsapp.com/send/?phone=543812073710&text=Hola%21+Me+gustar%C3%ADa+recibir+informaci%C3%B3n+sobre+el+curso+de+Rob%C3%B3tica+y+Programaci%C3%B3n+para+ni%C3%B1os+y+j%C3%B3venes+%EF%BF%BD&type=phone_number&app_absent=0">Enviar Whatsapp</a>
+<div class="container text-center">
+
+  <div class="row">
+
+    <div class="col-12 col-md-6">
+      <div class="card justify-content-center justify-content-md-center text-md-start text-center">
+        <h1 class="fs-1">Ombu Hub lleva habilidades tecnológicas a los jóvenes!</h1>
+        <p class="fs-3">Estamos en una misión para transformar la vida de los jovenes a través de la magia de la tecnología. ¿Quieres que tu hijo/a sea parte de esta experiencia única? </p>
+
+      <a class="btn btn-flat align-self-center align-self-md-start" href="https://api.whatsapp.com/send/?phone=543812073710&text=Hola%21+Me+gustar%C3%ADa+recibir+informaci%C3%B3n+sobre+el+curso+de+Rob%C3%B3tica+y+Programaci%C3%B3n+para+ni%C3%B1os+y+j%C3%B3venes+%EF%BF%BD&type=phone_number&app_absent=0">Enviar Whatsapp</a>
+       </div>
+
+    </div>
+
+
+    <div class="col-12 col-md-6">
+      <div class="card_photo justify-content-center justify-content-md-end">
+      <%= image_tag('oh.png', class: 'photo') %>
+      </div>
+    </div>
+
+
   </div>
+
+
+  <div class="row flex-md-row flex-column-reverse mt-5">
+
+    <div class="col-12 col-md-4">
+    <div class="card_photo justify-content-center justify-content-md-start">
+    <%= image_tag('oh3.png', class: 'photo') %>
+    </div>
+    <h1>Impresion 3D</h1>
+    </div>
+
+    <div class="col-12 col-md-4">
+    <div class="card_photo justify-content-center justify-content-md-start">
+    <%= image_tag('oh4.png', class: 'photo') %>
+    </div>
+    <h1>Lego Robotica</h1>
+    </div>
+
+    <div class="col-12 col-md-4">
+    <div class="card_photo justify-content-center justify-content-md-start">
+    <%= image_tag('oh5.png', class: 'photo') %>
+    </div>
+    <h1>Arduino</h1>
+    </div>
+
+  </div>
+
+
+  <div class="row mt-5">
+
+
+    <div class="col-12 col-md-6">
+      <div class="card_photo justify-content-center justify-content-md-end">
+      <%= image_tag('oh6.png', class: 'photo') %>
+      </div>
+    </div>
+
+
+
+    <div class="col-12 col-md-6 ">
+      <div class="card justify-content-center justify-content-md-center text-md-end text-center">
+        <h1 class="fs-1">Ombu Hub: Empoderando a la juventud con habilidades tecnológicas</h1>
+        <p class="fs-3">Página en construcción: Te invitamos a volver con regularidad para descubrir las últimas actualizaciones y mejoras que estamos implementando para satisfacer tus necesidades tecnológicas y educativas.</p>
+
+      <a class="btn btn-flat align-self-center align-self-md-end" href="https://api.whatsapp.com/send/?phone=543812073710&text=Hola%21+Me+gustar%C3%ADa+recibir+informaci%C3%B3n+sobre+el+curso+de+Rob%C3%B3tica+y+Programaci%C3%B3n+para+ni%C3%B1os+y+j%C3%B3venes+%EF%BF%BD&type=phone_number&app_absent=0">Enviar Whatsapp</a>
+       </div>
+
+    </div>
+
+
+
+  </div>
+
+
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- Write your comments here
+
+
+        <div class="col-12 col-md-6">
+              <div class="card justify-content-center justify-content-md-center text-md-end text-center">
+
+              <h1 class="fs-1">Pagina en ampliacion...</h1>
+               <p class="fs-3">Pronto mas contenido </p>
+              <div class="social d-flex justify-content-end">
+               <a href="https://www.instagram.com/ombu_hub/"><i class="fab fa-instagram p-2"></i></a>
+               <a href="https://www.linkedin.com/company/70938501/"><i class="fab fa-linkedin p-2"></i></a>
+              </div>
+
+
+            </div>
+-->
