--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,10 @@
       <div class="content-container">
         <%= render "shared/flashes" %>
         <%= yield %>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+          <a href="https://api.whatsapp.com/send/?phone=543812073710&text=Hola%21+Me+gustar%C3%ADa+recibir+informaci%C3%B3n+sobre+el+curso+de+Rob%C3%B3tica+y+Programaci%C3%B3n+para+ni%C3%B1os+y+j%C3%B3venes+%EF%BF%BD&type=phone_number&app_absent=0" class="float" target="_blank">
+             <i class="fa fa-whatsapp my-float"></i>
+          </a>
       </div>
       <div class="footer-container">
         <%= render "shared/footer" %>
