--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -49,12 +49,59 @@
   </div>
 
 
-  <div class="row mt-5">
+   <div class="row mt-5 ">
+
+    <div class="col-12 col-md-6 ">
+      <div class="card justify-content-center justify-content-md-center text-md-start text-center">
+        <h1 class="fs-1">Ubicación</h1>
+        <p class="fs-3">Nos ubicamos en Mate de Luna 4664 - Tucuman - Argentina. Visítanos pronto. </p>
+       </div>
+
+    </div>
 
 
     <div class="col-12 col-md-6">
       <div class="card_photo justify-content-center justify-content-md-end">
-      <%= image_tag('oh6.png', class: 'photo') %>
+      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.6578231409653!2d-65.26566932428545!3d-26.81902188929621!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225d9679aa2687%3A0x56d486d32847edaf!2sOmbu%20Hub!5e0!3m2!1ses!2sde!4v1694817086769!5m2!1ses!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
+
+
+  </div>
+
+
+  <div class="row flex-md-row flex-column-reverse mt-5">
+
+    <div class="col-12 col-md-4">
+    <div class="card_photo justify-content-center justify-content-md-start">
+    <%= image_tag('p3.png', class: 'photo') %>
+    </div>
+    <h1>Profe Nico</h1>
+    </div>
+
+    <div class="col-12 col-md-4">
+    <div class="card_photo justify-content-center justify-content-md-start">
+    <%= image_tag('p1.png', class: 'photo') %>
+    </div>
+    <h1>Profe Marcos</h1>
+    </div>
+
+    <div class="col-12 col-md-4">
+    <div class="card_photo justify-content-center justify-content-md-start">
+    <%= image_tag('p2.png', class: 'photo') %>
+    </div>
+    <h1>Profe Juan</h1>
+    </div>
+
+  </div>
+
+
+  <div class="row mt-5 flex-md-row flex-column-reverse">
+
+
+    <div class="col-12 col-md-6">
+      <div class="card_photo justify-content-center justify-content-md-end">
+      <%= image_tag('oh1.png', class: 'photo') %>
       </div>
     </div>
 
@@ -72,7 +119,10 @@
 
 
 
+
   </div>
+
+
 
 
 </div>
