--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,25 +25,32 @@
 
   <div class="row flex-md-row flex-column-reverse mt-5">
 
-    <div class="col-12 col-md-4">
+    <div class="col-12 col-md-3">
     <div class="card_photo justify-content-center justify-content-md-start">
     <%= image_tag('oh3.png', class: 'photo') %>
     </div>
     <h1>Impresion 3D</h1>
     </div>
 
-    <div class="col-12 col-md-4">
+    <div class="col-12 col-md-3">
+    <div class="card_photo justify-content-center justify-content-md-start">
+    <%= image_tag('oh5.png', class: 'photo') %>
+    </div>
+    <h1>Arduino</h1>
+    </div>
+
+    <div class="col-12 col-md-3">
     <div class="card_photo justify-content-center justify-content-md-start">
     <%= image_tag('oh4.png', class: 'photo') %>
     </div>
     <h1>Lego Robotica</h1>
     </div>
 
-    <div class="col-12 col-md-4">
+    <div class="col-12 col-md-3">
     <div class="card_photo justify-content-center justify-content-md-start">
-    <%= image_tag('oh5.png', class: 'photo') %>
+    <%= image_tag('oh7.png', class: 'photo') %>
     </div>
-    <h1>Arduino</h1>
+    <h1>Y mucho mas!</h1>
     </div>
 
   </div>
