--- a/app/assets/stylesheets/components/_photo.scss
+++ b/app/assets/stylesheets/components/_photo.scss
@@ -1,6 +1,6 @@
 .photo {
   width: 100%;
-  max-width: 100%
+  max-width: 100%;
   height: auto;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   // padding: 10px;
