--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -116,7 +116,7 @@
 
     <div class="col-12 col-md-6 ">
       <div class="card justify-content-center justify-content-md-center text-md-end text-center">
-        <h1 class="fs-1">Test Ombu Hub: Empoderando a la juventud con habilidades tecnológicas</h1>
+        <h1 class="fs-1">Ombu Hub: Empoderando a la juventud con habilidades tecnológicas</h1>
         <p class="fs-3">Página en construcción: Te invitamos a volver con regularidad para descubrir las últimas actualizaciones y mejoras que estamos implementando para satisfacer tus necesidades tecnológicas y educativas.</p>
 
       <a class="btn btn-flat align-self-center align-self-md-end" href="https://api.whatsapp.com/send/?phone=543812073710&text=Hola%21+Me+gustar%C3%ADa+recibir+informaci%C3%B3n+sobre+el+curso+de+Rob%C3%B3tica+y+Programaci%C3%B3n+para+ni%C3%B1os+y+j%C3%B3venes+%EF%BF%BD&type=phone_number&app_absent=0">Enviar Whatsapp</a>
