--- a/app/views/pages/online.html.erb
+++ b/app/views/pages/online.html.erb
@@ -11,10 +11,10 @@
 
     <div class="col-12 col-md-6">
       <div class="card justify-content-center justify-content-md-center text-md-start text-center">
-        <h1 class="fs-1">Ombu Hub brings technological skills to the youth!</h1>
-        <p class="fs-3">We are on a mission to transform the lives of young people through technology. Do you want your son/daughter to be part of this unique experience?</p>
-
-      <a class="btn btn-flat align-self-center align-self-md-start" href="https://api.whatsapp.com/send/?phone=543812073710&text=Hola%21+Me+gustar%C3%ADa+recibir+informaci%C3%B3n+sobre+el+curso+de+Rob%C3%B3tica+y+Programaci%C3%B3n+para+ni%C3%B1os+y+j%C3%B3venes+%EF%BF%BD&type=phone_number&app_absent=0">Whatsapp</a>
+        <h1 class="fs-1">Workshop: Learn Robotics and Programming - Free Trial</h1>
+        <p class="fs-3">In our intensive Arduino workshop, in just 2 hours, kids will learn to create their first Smart Alarm project configured with an ultrasonic sensor.
+</p>
+        <a class="btn btn-flat align-self-center align-self-md-start" href="https://forms.gle/EBhbXqPxYnj5RU6N6">Register Now</a>
        </div>
 
     </div>
@@ -29,41 +29,49 @@
 
   </div>
 
-  <!-- What is OmbuHub? -->
-  <section id="about-ombuhub" class="mb-4">
-      <h2 class="h3 mb-3 border-bottom pb-2">What is OmbuHub?</h2>
-      <p>
-          OmbuHub is an innovative bootcamp designed specifically for the young minds of tomorrow. We believe every child has the potential to craft wonders, and with the power of Robotics and AI, the sky's the limit! Dive into a world where imagination meets creation.
-      </p>
-  </section>
 
-  <!-- What do we offer? -->
-  <section id="offerings" class="mb-4">
-      <h2 class="h3 mb-3 border-bottom pb-2">What do we offer?</h2>
-      <ul class="list-unstyled">
-          <li><i class="fas fa-check mr-2 text-success"></i> Interactive Sessions: Learn Robotics and 3D Impresion and more concepts through fun and engaging methods.</li>
-          <li><i class="fas fa-check mr-2 text-success"></i> Hands-on Projects: Bring your ideas to life with practical projects.</li>
-          <li><i class="fas fa-check mr-2 text-success"></i> Instructors: Passionate experts molding the next generation.</li>
-          <li><i class="fas fa-check mr-2 text-success"></i> Collaborative Learning: Team up with other Ombuses and embark on tech adventures.</li>
-      </ul>
-  </section>
 
   <!-- Who can join? -->
   <section id="eligibility" class="mb-4">
       <h2 class="h3 mb-3 border-bottom pb-2">Who can join?</h2>
       <p>
-          All children between the ages of 7-16 are welcome to join the OmbuHub family! Whether you're a newbie or a tech prodigy, there's a place for you here.
+          All children between the ages of 9-15 are welcome to join the OmbuHub family! Whether you're a newbie or a tech prodigy, there's a place for you here.
+      </p>
+
+      <h2 class="h3 mb-3 border-bottom pb-2">When and how?</h2>
+      <p>
+          The workshop will be online and will be done the 22 of November - 18:30 Berlin/Amsterdam/Madrid Time - CET UTC +1
+      </p>
+
+      <h2 class="h3 mb-3 border-bottom pb-2">What is need it?</h2>
+      <p>
+          <ul class="">
+          <li></i> Age between of 9 and 15 years old. 😀</li>
+          <li></i> Computer with connection to internet. 💻 </li>
+          <li></i> Good level of english since the workshop will be heal in English 🏴󠁧󠁢󠁥󠁮󠁧󠁿 </li>
+          <li></i> Lots of interest to learn and grow.🚀 </li>
+      </ul>
       </p>
   </section>
 
-  <!-- What stack do we use? -->
-  <section id="tech-stack" class="mb-4">
-      <h2 class="h3 mb-3 border-bottom pb-2">What stack do we use?</h2>
-      <ul class="list-unstyled">
-          <li><i class="fas fa-robot mr-2 text-primary"></i> Robotics Kits: Beginner-friendly kits tailored for children.</li>
-          <li><i class="fas fa-laptop-code mr-2 text-primary"></i> Scratch: Coding platforms for young learners.</li>
-          <li><i class="fas fa-shapes mr-2 text-primary"></i> TinkerCAD: For digital designs and understanding robotics.</li>
-          <li><i class="fas fa-code mr-2 text-primary"></i> Python: Exposure to a versatile language used in AI.</li>
+    <section id="about-ombuhub" class="mb-4">
+      <h2 class="h3 mb-3 border-bottom pb-2">What is OmbuHub?</h2>
+      <p>
+          Ombu Hub is an innovative academy for kids designed specifically for the young minds of tomorrow. We believe every child has the potential to craft wonders, and with the power of Robotics, Coding and design, only the sky's the limit! Dive into a world where imagination meets creation.
+      </p>
+  </section>
+
+
+  <!-- What do we offer? -->
+  <section id="offerings" class="mb-4">
+      <h2 class="h3 mb-3 border-bottom pb-2">What do we offer in our school?</h2>
+      <ul class="">
+          <li></i> Interactive Sessions: Learn Robotics and 3D Impresion and more concepts through fun and engaging methods.</li>
+          <li></i> Hands-on Projects: Bring your ideas to life with practical projects.</li>
+          <li></i> Instructors: Passionate experts molding the next generation.</li>
+          <li></i> Collaborative Learning: Team up with other Ombuses and embark on tech adventures.</li>
       </ul>
   </section>
+
+
 </div>
