--- a/app/views/pages/online.html.erb
+++ b/app/views/pages/online.html.erb
@@ -11,9 +11,10 @@
 
     <div class="col-12 col-md-6">
       <div class="card justify-content-center justify-content-md-center text-md-start text-center">
-        <h1 class="fs-1">Workshop: Learn Robotics and Programming - Free Trial</h1>
+        <h1 class="fs-1 ">Workshop: Learn Robotics and Programming - Free Trial</h1>
+         <!-- -->
         <p class="fs-3">In our intensive Arduino workshop, in just 2 hours, kids will learn to create their first Smart Alarm project configured with an ultrasonic sensor.
-</p>
+        </p>
         <a class="btn btn-flat align-self-center align-self-md-start" href="https://forms.gle/EBhbXqPxYnj5RU6N6">Register Now</a>
        </div>
 
@@ -33,17 +34,17 @@
 
   <!-- Who can join? -->
   <section id="eligibility" class="mb-4">
-      <h2 class="h3 mb-3 border-bottom pb-2">Who can join?</h2>
+      <h2 class="h3 mb-3 border-bottom pb-2 tittle">Who can join?</h2>
       <p>
           All children between the ages of 9-15 are welcome to join the OmbuHub family! Whether you're a newbie or a tech prodigy, there's a place for you here.
       </p>
 
-      <h2 class="h3 mb-3 border-bottom pb-2">When and how?</h2>
+      <h2 class="h3 mb-3 border-bottom pb-2 tittle">When and how?</h2>
       <p>
           The workshop will be online and will be done the 22 of November - 18:30 Berlin/Amsterdam/Madrid Time - CET UTC +1
       </p>
 
-      <h2 class="h3 mb-3 border-bottom pb-2">What is need it?</h2>
+      <h2 class="h3 mb-3 border-bottom pb-2 tittle">What is need it?</h2>
       <p>
           <ul class="">
           <li></i> Age between of 9 and 15 years old. 😀</li>
@@ -55,7 +56,7 @@
   </section>
 
     <section id="about-ombuhub" class="mb-4">
-      <h2 class="h3 mb-3 border-bottom pb-2">What is OmbuHub?</h2>
+      <h2 class="h3 mb-3 border-bottom pb-2 tittle">What is OmbuHub?</h2>
       <p>
           Ombu Hub is an innovative academy for kids designed specifically for the young minds of tomorrow. We believe every child has the potential to craft wonders, and with the power of Robotics, Coding and design, only the sky's the limit! Dive into a world where imagination meets creation.
       </p>
@@ -64,7 +65,7 @@
 
   <!-- What do we offer? -->
   <section id="offerings" class="mb-4">
-      <h2 class="h3 mb-3 border-bottom pb-2">What do we offer in our school?</h2>
+      <h2 class="h3 mb-3 border-bottom pb-2 tittle">What do we offer in our school?</h2>
       <ul class="">
           <li></i> Interactive Sessions: Learn Robotics and 3D Impresion and more concepts through fun and engaging methods.</li>
           <li></i> Hands-on Projects: Bring your ideas to life with practical projects.</li>
