--- a/app/views/pages/online.html.erb
+++ b/app/views/pages/online.html.erb
@@ -1,3 +1,8 @@
+<meta property="og:title" content="Workshop: Learn Robotics and Programming - Free Trial" />
+<meta property="og:description" content="In our intensive Arduino workshop, in just 2 hours, kids will learn to create their first Smart Alarm project configured with an ultrasonic sensor." />
+<meta property="og:url" content="https://www.ombuhub.com/online"/>
+
+
 <div class="container mt-5">
     <!-- Header -->
   <header class="text-center mb-5">
@@ -13,7 +18,7 @@
       <div class="card justify-content-center justify-content-md-center text-md-start text-center">
         <h1 class="fs-1 ">Workshop: Learn Robotics and Programming - Free Trial</h1>
          <!-- -->
-        <p class="fs-3">In our intensive Arduino workshop, in just 2 hours, kids will learn to create their first Smart Alarm project configured with an ultrasonic sensor.
+        <p class="fs-4">In our intensive Arduino workshop, in just 2 hours, kids will learn to create their first Smart Alarm project configured with an ultrasonic sensor.
         </p>
         <a class="btn btn-flat align-self-center align-self-md-start" href="https://forms.gle/EBhbXqPxYnj5RU6N6">Register Now</a>
        </div>
@@ -23,7 +28,7 @@
 
     <div class="col-12 col-md-6">
       <div class="card_photo justify-content-center justify-content-md-end">
-      <%= image_tag('oh.png', class: 'photo') %>
+      <%= image_tag('b1.png', class: 'photo') %>
       </div>
     </div>
 
@@ -33,7 +38,7 @@
 
 
   <!-- Who can join? -->
-  <section id="eligibility" class="mb-4">
+  <section id="eligibility" class="mb-4 mt-5">
       <h2 class="h3 mb-3 border-bottom pb-2 tittle">Who can join?</h2>
       <p>
           All children between the ages of 9-15 are welcome to join the OmbuHub family! Whether you're a newbie or a tech prodigy, there's a place for you here.
