4 typos fixed on the online.html.erb

--- a/app/views/pages/online.html.erb
+++ b/app/views/pages/online.html.erb
@@ -48,12 +48,12 @@
           The workshop will be online and will be done the 22 of November - 18:30 Berlin/Amsterdam/Madrid Time - CET UTC +1
       </p>
 
-      <h2 class="h3 mb-3 border-bottom pb-2 ">What is need it?</h2>
+      <h2 class="h3 mb-3 border-bottom pb-2 ">What is needed?</h2>
       <p>
           <ul class="">
-          <li></i> Age between of 9 and 15 years old. 😀</li>
+          <li></i> Age between 9 and 15 years old. 😀</li>
           <li></i> Computer with connection to internet. 💻 </li>
-          <li></i> Good level of english since the workshop will be heal in English 🏴󠁧󠁢󠁥󠁮󠁧󠁿 </li>
+          <li></i> Good level of English, as the workshop will be held in English. 🏴󠁧󠁢󠁥󠁮󠁧󠁿 </li>
           <li></i> Lots of interest to learn and grow.🚀 </li>
       </ul>
       </p>
@@ -71,7 +71,7 @@
   <section id="offerings" class="mb-4">
       <h2 class="h3 mb-3 border-bottom pb-2 ">What do we offer in our school?</h2>
       <ul class="">
-          <li></i> Interactive Sessions: Learn Robotics and 3D Impresion and more concepts through fun and engaging methods.</li>
+          <li></i> Interactive Sessions: Learn Robotics, 3D Printing, and more concepts through fun and engaging methods.</li>
           <li></i> Hands-on Projects: Bring your ideas to life with practical projects.</li>
           <li></i> Instructors: Passionate experts molding the next generation.</li>
           <li></i> Collaborative Learning: Team up with other Ombuses and embark on tech adventures.</li>
