--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-MP5ZSXMG');</script>
     <!-- End Google Tag Manager -->
-    <title>Ombu Hub</title>
+    <title><%= yield(:title) %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
