--- a/app/views/pages/workshopArduino.html.erb
+++ b/app/views/pages/workshopArduino.html.erb
@@ -1,5 +1,5 @@
 
-<% content_for :title, "Workshop: Learn Robotics and Programming - Free Trial" %>
+<% content_for :title, "Workshop: Free Trial Arduino for Kids" %>
 <meta property="og:title" content="Workshop: Learn Robotics and Programming - Free Trial" />
 <meta property="og:description" content="In our intensive Arduino workshop, in just 2 hours, kids will learn to create their first Smart Alarm project configured with an ultrasonic sensor." />
 <meta property="og:url" content="https://www.ombuhub.com/online"/>
