--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,8 +1,9 @@
 
 .card {
+  margin-top: 36px;
   display: flex;
   border: none;
-  padding: 36px;
+  // padding: 36px;
   background: none;
   display: flex;
   flex-direction: column;
