--- a/app/views/pages/workshopArduino.html.erb
+++ b/app/views/pages/workshopArduino.html.erb
@@ -5,7 +5,7 @@
 <meta property="og:url" content="https://www.ombuhub.com/online"/>
 
 
-<div class="container mt-5">
+<div class="container">
     <!-- Header -->
   <header class="text-center mb-5">
         <!-- Photo and Title
@@ -18,11 +18,11 @@
 
     <div class="col-12 col-md-6">
       <div class="card justify-content-center justify-content-md-center text-md-start text-center">
-        <h1 class="fs-1 ">Workshop: Learn Robotics and Programming - Free Trial</h1>
+        <h1 class="fs-1 "><i>Workshop:</i> Learn Robotics and Programming - Free Trial class</h1>
          <!-- -->
-        <p class="fs-4">In our intensive Arduino workshop, in just 2 hours, kids will learn to create their first Smart Alarm project configured with an ultrasonic sensor.
+        <p class="fs-4">In our intensive <b> Arduino </b> workshop, in just 2 hours, kids will learn to create their first <b>Smart</b> alarm project configured with an ultrasonic sensor. <b>Fully online.</b>
         </p>
-        <a class="btn btn-flat align-self-center align-self-md-start" href="https://forms.gle/EBhbXqPxYnj5RU6N6">Register Now</a>
+        <a class="btn btn-flat align-self-center align-self-md-start" href="https://bit.ly/arduino-workshop-free">Sign Up Now</a>
        </div>
 
     </div>
@@ -30,7 +30,7 @@
 
     <div class="col-12 col-md-6">
       <div class="card_photo justify-content-center justify-content-md-end">
-      <%= image_tag('b1.png', class: 'photo') %>
+      <%= image_tag('b2.jpg', class: 'photo') %>
       </div>
     </div>
 
@@ -42,12 +42,12 @@
   <section id="eligibility" class="mb-4 mt-5">
       <h2 class="h3 mb-3 border-bottom pb-2 ">Who can join?</h2>
       <p>
-          All children between the ages of 9-15 are welcome to join the OmbuHub family! Whether you're a newbie or a tech prodigy, there's a place for you here.
+          All children between the ages of 9-15 are welcome to join the Ombu Hub! Whether you're a newbie or a tech savy, there's a place for you here.
       </p>
 
       <h2 class="h3 mb-3 border-bottom pb-2 ">When and how?</h2>
       <p>
-          The workshop will be online and will be done the 22 of November - 18:30 Berlin/Amsterdam/Madrid Time - CET UTC +1
+          The workshop will be online and will take place Saturday 25 of November - 18:30 Berlin/Amsterdam/Madrid Time - CET UTC +1
       </p>
 
       <h2 class="h3 mb-3 border-bottom pb-2 ">What is needed?</h2>
@@ -62,9 +62,9 @@
   </section>
 
     <section id="about-ombuhub" class="mb-4">
-      <h2 class="h3 mb-3 border-bottom pb-2 ">What is OmbuHub?</h2>
+      <h2 class="h3 mb-3 border-bottom pb-2 ">What is Ombu Hub?</h2>
       <p>
-          Ombu Hub is an innovative academy for kids designed specifically for the young minds of tomorrow. We believe every child has the potential to craft wonders, and with the power of Robotics, Coding and design, only the sky's the limit! Dive into a world where imagination meets creation.
+          Ombu Hub is a kid academy designed specifically for the young minds. We believe every child has the potential to craft wonders, and with the power of Robotics, Coding and Design, only the sky's the limit! Dive into a world where coding meets creation.
       </p>
   </section>
 
@@ -76,9 +76,30 @@
           <li></i> Interactive Sessions: Learn Robotics, 3D Printing, and more concepts through fun and engaging methods.</li>
           <li></i> Hands-on Projects: Bring your ideas to life with practical projects.</li>
           <li></i> Instructors: Passionate experts molding the next generation.</li>
-          <li></i> Collaborative Learning: Team up with other Ombuses and embark on tech adventures.</li>
+          <li></i> Collaborative Learning: Team up with other Ombues and embark on tech adventures.</li>
       </ul>
   </section>
+
+
+   <div class="row mt-5">
+
+    <div class="col-12 col-md-6 ">
+      <div class="">
+        <h1 class="h3 mb-3 border-bottom pb-2">Location</h1>
+        <p>Our offices are located in <b>Argentina</b> and we are recently also taking place <b>Online</b>. </p>
+       </div>
+
+    </div>
+
+
+    <div class="col-12 col-md-6">
+      <div class="card_photo justify-content-center justify-content-md-end">
+      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.6578231409653!2d-65.26566932428545!3d-26.81902188929621!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225d9679aa2687%3A0x56d486d32847edaf!2sOmbu%20Hub!5e0!3m2!1ses!2sde!4v1694817086769!5m2!1ses!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
+
+
+  </div>
 
 
 </div>
