--- a/app/views/pages/workshopArduino.html.erb
+++ b/app/views/pages/workshopArduino.html.erb
@@ -22,7 +22,7 @@
          <!-- -->
         <p class="fs-4">In our intensive <b> Arduino </b> workshop, in just 2 hours, kids will learn to create their first <b>Smart</b> alarm project configured with an ultrasonic sensor. <b>Fully online.</b>
         </p>
-        <a class="btn btn-flat align-self-center align-self-md-start" href="https://bit.ly/arduino-workshop-free">Sign Up Now</a>
+        <a class="btn btn-flat align-self-center align-self-md-start sign-up" href="https://bit.ly/arduino-workshop-free">Sign Up Now</a>
        </div>
 
     </div>
@@ -42,12 +42,12 @@
   <section id="eligibility" class="mb-4 mt-5">
       <h2 class="h3 mb-3 border-bottom pb-2 ">Who can join?</h2>
       <p>
-          All children between the ages of 9-15 are welcome to join the Ombu Hub! Whether you're a newbie or a tech savy, there's a place for you here.
+          All children between the ages of 9-15 are welcome to join the Ombu Hub! Whether you're a newbie or a tech savvy, there's a place for you here.
       </p>
 
       <h2 class="h3 mb-3 border-bottom pb-2 ">When and how?</h2>
       <p>
-          The workshop will be online and will take place Saturday 25 of November - 18:30 Berlin/Amsterdam/Madrid Time - CET UTC +1
+          The workshop will be online and will take place on Saturday, November 25th, at 18:30 Berlin/Amsterdam/Madrid Time CET UTC +1.
       </p>
 
       <h2 class="h3 mb-3 border-bottom pb-2 ">What is needed?</h2>
@@ -86,7 +86,7 @@
     <div class="col-12 col-md-6 ">
       <div class="">
         <h1 class="h3 mb-3 border-bottom pb-2">Location</h1>
-        <p>Our offices are located in <b>Argentina</b> and we are recently also taking place <b>Online</b>. </p>
+          <p>Our offices are located in <b>Argentina</b> and we are recently also taking place <b>Online</b>. </p>
        </div>
 
     </div>
