--- a/app/views/pages/workshopArduino.html.erb
+++ b/app/views/pages/workshopArduino.html.erb
@@ -1,8 +1,15 @@
 
 <% content_for :title, "Workshop: Free Trial Arduino for Kids" %>
+
 <meta property="og:title" content="Workshop: Learn Robotics and Programming - Free Trial" />
+<meta name="description" content="Join our intensive Arduino workshop for kids and learn to create a Smart Alarm project in just 2 hours. Fully online. Sign up now!">
+
 <meta property="og:description" content="In our intensive Arduino workshop, in just 2 hours, kids will learn to create their first Smart Alarm project configured with an ultrasonic sensor." />
 <meta property="og:url" content="https://www.ombuhub.com/online"/>
+<meta property="og:image" content="https://www.ombuhub.com/assets/b2-b8ccf0fa4fe668f1a51a0d15f37f4ba2c372367c9335a2edd82fdf6986e9e4d7.jpg" />
+<meta property="og:type" content="website" />
+<meta property="og:locale" content="en_US" />
+
 
 
 <div class="container">
@@ -15,17 +22,14 @@
   </header>
 
     <div class="row">
+        <div class="col-12 col-md-6">
+          <div class="card justify-content-center justify-content-md-center text-md-start text-center">
+              <h1 class="fs-1"><i>Workshop:</i> Learn Robotics and Programming - Free Trial class</h1>
+              <p class="fs-4">Join our intensive Arduino workshop designed for kids aged 9-15. In just 2 hours, they'll create their first project. The workshop is fully online. Sign up now!</p>
+              <a class="btn btn-flat align-self-center align-self-md-start sign-up" href="https://bit.ly/arduino-workshop-free">Sign Up Now</a>
+          </div>
+        </div>
 
-    <div class="col-12 col-md-6">
-      <div class="card justify-content-center justify-content-md-center text-md-start text-center">
-        <h1 class="fs-1 "><i>Workshop:</i> Learn Robotics and Programming - Free Trial class</h1>
-         <!-- -->
-        <p class="fs-4">In our intensive <b> Arduino </b> workshop, in just 2 hours, kids will learn to create their first <b>Smart</b> alarm project configured with an ultrasonic sensor. <b>Fully online.</b>
-        </p>
-        <a class="btn btn-flat align-self-center align-self-md-start sign-up" href="https://bit.ly/arduino-workshop-free">Sign Up Now</a>
-       </div>
-
-    </div>
 
 
     <div class="col-12 col-md-6">
@@ -52,12 +56,12 @@
 
       <h2 class="h3 mb-3 border-bottom pb-2 ">What is needed?</h2>
       <p>
-          <ul class="">
-          <li></i> Age between 9 and 15 years old. 😀</li>
-          <li></i> Computer with connection to internet. 💻 </li>
-          <li></i> Good level of English, as the workshop will be held in English. 🏴󠁧󠁢󠁥󠁮󠁧󠁿 </li>
-          <li></i> Lots of interest to learn and grow.🚀 </li>
-      </ul>
+        <ul>
+          <li>Age between 9 and 15 years old. 😀</li>
+          <li>Computer with connection to the internet. 💻</li>
+          <li>Good level of English, as the workshop will be held in English. 🏴󠁧󠁢󠁥󠁮󠁧󠁿</li>
+          <li>Lots of interest to learn and grow.🚀</li>
+        </ul>
       </p>
   </section>
 
@@ -86,7 +90,7 @@
     <div class="col-12 col-md-6 ">
       <div class="">
         <h1 class="h3 mb-3 border-bottom pb-2">Location</h1>
-          <p>Our offices are located in <b>Argentina</b> and we are recently also taking place <b>Online</b>. </p>
+          <p>Our offices are located in <b>Argentina</b>, and we also offer classes <b>Online</b>.</p>
        </div>
 
     </div>
