--- a/app/views/pages/workshopArduino.html.erb
+++ b/app/views/pages/workshopArduino.html.erb
@@ -34,7 +34,10 @@
 
     <div class="col-12 col-md-6">
       <div class="card_photo justify-content-center justify-content-md-end">
-      <%= image_tag('b2.jpg', class: 'photo') %>
+        
+
+            <%= image_tag('b2.jpg', class: 'photo') %>
+
       </div>
     </div>
 
@@ -98,7 +101,12 @@
 
     <div class="col-12 col-md-6">
       <div class="card_photo justify-content-center justify-content-md-end">
+
+                <!-- Header
+
       <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.6578231409653!2d-65.26566932428545!3d-26.81902188929621!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225d9679aa2687%3A0x56d486d32847edaf!2sOmbu%20Hub!5e0!3m2!1ses!2sde!4v1694817086769!5m2!1ses!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+       -->
       </div>
     </div>
 
