--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
     <%= favicon_link_tag asset_path('ombu_logo.png') %>
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/0dc4fb82b8030e3d9c2c1d518/50afd331aee972402803e7837.js");</script>
 
   </head>
 
@@ -26,7 +27,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <div class="page-container">
       <div class="navbar-container">
-           
+
                 <%= render "shared/navbar" %>
 
       </div>
