--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -15,6 +15,11 @@
     edit_course_path(course.url)
     %>
 
+    <%= link_to "View",
+    course_path(course.url)
+    %>
+
+
 
   <% end %>
 </ul>
