--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -10,10 +10,10 @@
 <%= simple_form_for @course, html: { class: 'form' } do |f| %>
   <%= f.input :url, label_html: { class: 'form-label' }, input_html: { class: 'form-control' },label: 'URL of the website', error: 'Username is mandatory, please specify one' %>
   <%= f.input :title, label_html: { class: 'form-label' }, input_html: { class: 'form-control' }, label: 'Title of the workshop' %>
-  <%= f.input :description, as: :text, label_html: { class: 'form-label' }, input_html: { class: 'form-control' },label: 'Description' %>
-  <%= f.input :when, as: :text, label_html: { class: 'form-label' }, input_html: { class: 'form-control' } ,label: 'When and where the course will be done'%>
-  <%= f.input :what, as: :text, label_html: { class: 'form-label' }, input_html: { class: 'form-control' } ,label: 'What is needed for the course'%>
-  <%= f.input :who, as: :text, label_html: { class: 'form-label' }, input_html: { class: 'form-control' } , label: 'For who is the workshop'%>
+  <%= f.input :description, as: :text, label_html: { class: 'form-label' }, input_html: { class: 'form-control' },label: 'Short Description' %>
+  <%= f.input :when, as: :text, label_html: { class: 'form-label' }, input_html: { class: 'form-control' } ,label: 'When and how?'%>
+  <%= f.input :what, as: :text, label_html: { class: 'form-label' }, input_html: { class: 'form-control' } ,label: 'What is needed?'%>
+  <%= f.input :who, as: :text, label_html: { class: 'form-label' }, input_html: { class: 'form-control' } , label: 'Who can join?'%>
 
 <br>
   <%= f.button :submit, 'Create or Update', class: 'btn btn-primary' %>
