--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,27 +1,30 @@
 <% if current_user.admin == true %>
 
-<ul>
   <% @courses.each do |course| %>
-    <li>Title <%= course.title %></li>
-    <li>Description <%= course.description %></li>
-    <li>When <%= course.when %></li>
-    <li>URL <%= course.url %></li>
-    <%= link_to "Delete",
-    course_path(course.url),
-    data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+ <div class="card-product m-5">
+
+
+  <div class="card-product-infos">
+    <h2><%= course.title %></h2>
+    <p><%= course.description %></p>
+
+
+
+    <%= link_to "View",
+    course_path(course.url)
     %>
 
     <%= link_to "Edit",
     edit_course_path(course.url)
     %>
 
-    <%= link_to "View",
-    course_path(course.url)
+
+    <%= link_to "Delete",
+    course_path(course.url),
+    data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
     %>
-
-
-
+  </div>
+</div>
   <% end %>
-</ul>
 
 <% end %>
