--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,5 +1,5 @@
 
-<% content_for :title, "Workshop: Free Trial Arduino for Kids" %>
+<% content_for :title, "Ombu Hub" %>
 
 <meta property="og:title" content="Workshop: Learn Robotics and Programming - Free Trial" />
 <meta name="description" content="Join our intensive Arduino workshop for kids and learn to create a Smart Alarm project in just 2 hours. Fully online. Sign up now!">
@@ -36,7 +36,7 @@
       <div class="card_photo justify-content-center justify-content-md-end">
 
 
-            <%= image_tag('b2.jpg', class: 'photo') %>
+            <%= image_tag('bn3.png', class: 'photo') %>
 
       </div>
     </div>
@@ -49,22 +49,17 @@
   <section id="eligibility" class="mb-4 mt-5">
       <h2 class="h3 mb-3 border-bottom pb-2 ">Who can join?</h2>
       <p>
-          All children between the ages of 9-15 are welcome to join the Ombu Hub! Whether you're a newbie or a tech savvy, there's a place for you here.
+         <%= @course.who %>
       </p>
 
       <h2 class="h3 mb-3 border-bottom pb-2 ">When and how?</h2>
       <p>
-          The workshop will be online and will take place on <%= @course.when %> - Berlin/Amsterdam/Madrid Time CET UTC +1.
+          <%= @course.when %>
       </p>
 
       <h2 class="h3 mb-3 border-bottom pb-2 ">What is needed?</h2>
       <p>
-        <ul>
-          <li>Age between 9 and 15 years old. 😀</li>
-          <li>Computer with connection to the internet. 💻</li>
-          <li>Good level of English, as the workshop will be held in English. 🏴󠁧󠁢󠁥󠁮󠁧󠁿</li>
-          <li>Lots of interest to learn and grow.🚀</li>
-        </ul>
+          <%= @course.what %>
       </p>
   </section>
 
@@ -93,7 +88,7 @@
     <div class="col-12 col-md-6 ">
       <div class="">
         <h1 class="h3 mb-3 border-bottom pb-2">Location</h1>
-          <p>Our offices are located in <b>Argentina</b>, and we also offer classes <b>Online</b>.</p>
+          <p>Our offices are located in <b>Argentina</b>, and we also offer classes in <b>Berlin, Germany</b>.</p>
        </div>
 
     </div>
