--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -14,6 +14,8 @@
   <%= f.input :when, as: :text, label_html: { class: 'form-label' }, input_html: { class: 'form-control' } ,label: 'When and how?'%>
   <%= f.input :what, as: :text, label_html: { class: 'form-label' }, input_html: { class: 'form-control' } ,label: 'What is needed?'%>
   <%= f.input :who, as: :text, label_html: { class: 'form-label' }, input_html: { class: 'form-control' } , label: 'Who can join?'%>
+  <%= f.input :photo, as: :file %>
+
 
 <br>
   <%= f.button :submit, 'Create or Update', class: 'btn btn-primary' %>
