--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -35,8 +35,10 @@
     <div class="col-12 col-md-6">
       <div class="card_photo justify-content-center justify-content-md-end">
 
+            <%= cl_image_tag @course.photo.key, class: 'photo' %>
+            <%# <%= image_tag('bn3.png', class: 'photo') %>
 
-            <%= image_tag('bn3.png', class: 'photo') %>
+            <%# Without cloudinary - Code %>
 
       </div>
     </div>
@@ -115,6 +117,16 @@
     course_path(@course),
     data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
     %>
+
+    <%= link_to "Edit",
+    edit_course_path(@course.url)
+    %>
+
 <% end %>
+
+
+
+
+
 
 </div>
